# release-agent

./: .env.template  .gitignore  AGENTS.md  Dockerfile  INSTALL.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yaml  release.yaml  scan.yaml  tests.yaml
etc/: clickhouse-config.xml  docker-compose.yml  docker-entrypoint  nginx.conf  release-agent.service
src/: constants.py  exceptions.py  main.py  models.py  utils.py
src/db/: __init__.py  clickhouse.py  dependencies.py  models.py  redis.py  repositories.py  services.py  session.py
src/migrations/: env.py
src/migrations/versions/: 0001_initial.py  0002_releases.py
src/modules/admin/: app.py  auth.py  constants.py  utils.py
src/modules/admin/templates/: analytics.html  analytics_charts.html  analytics_dashboard.html  analytics_queries.html  dashboard.html  error_alert.html  release_create.html  release_details.html  release_edit.html  token_details.html
src/modules/admin/templates/releases/: release_create.html  release_details.html  release_edit.html  release_editor_macros.html
src/modules/admin/views/: __init__.py  analytics.py  base.py  releases.py  tokens.py  users.py
src/modules/api/: __init__.py  base.py  public.py  releases.py  system.py
src/modules/auth/: dependencies.py  hashers.py  tokens.py
src/modules/cli/: __init__.py  generate_secrets.py  management.py
src/services/: analytics.py  analytics_seed.py  cache.py  counters.py  proxy.py
src/settings/: __init__.py  app.py  db.py  log.py  utils.py
src/tests/: conftest.py  mocks.py
src/tests/api/: test_api_public.py  test_api_system.py  test_auth_integration.py
src/tests/services/: test_services_cache.py
src/tests/units/: test_analytics_seed.py  test_dependencies.py  test_models.py  test_repositories.py  test_services.py  test_session.py  test_settings.py  test_utils.py
src/tests/units/admin/: conftest.py  test_admin_app.py  test_admin_views_analytics.py  test_admin_views_tokens.py  test_admin_views_users.py
src/tests/units/auth/: conftest.py  test_admin_auth.py  test_auth_edge_cases.py  test_auth_hashers.py  test_auth_tokens.py  test_auth_verification.py
src/tests/units/cli/: test_generate_secrets.py  test_management.py
(+1 files in other folders)
