[project]
name = "release-agent"
version = "0.1.0"
description = "Release Agent (some helper system to manage releases)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.121.2",
    "itsdangerous==2.2.0",         # required by session engine
    "uvicorn==0.38.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "httpx[socks]==0.28.1",
    "sqlalchemy[asyncio]==2.0.44",
    "sqladmin==0.21.0",
    "alembic==1.17.2",
    "asyncpg==0.30.0",
    "pyjwt==2.10.1",
    "pycryptodomex==3.23.0",       # for API key encryptions
    "uvloop==0.22.1",
    "redis==5.2.1",                # for Redis cache backend
]

[tool.uv]
dev-dependencies = [
    "types-WTForms>=3.2,<4",
    "pytest>=8.3,<9",
    "pytest-asyncio>=1.2.0,<1.3",
    "coverage>=7.10,<7.11",
    "black>=25.1,<26.0",
    "ruff>=0.13,<0.15",
    "mypy>=0.18,<1.19",
    # pycharm requires:
    "setuptools>=78.1,<81.0",
    "pip<26",
]

# === Ruff settings ===
[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
    ".idea/",
]

# Same as Black.
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

# === Other tools settings settings ===

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
strict = true
exclude = ["src/tests", "src/migrations", ".local", "test_*"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = [
    # Regexes for lines to exclude from consideration
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/cli/*", "src/tests/*", "src/migrations/*"]
